--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Animal Androids...",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/Omega0x013/exopet#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "@omega0x013/flat-express": "^1.2.0",
+    "express": "^4.18.1",
+    "locallydb": "^0.0.9",
+    "qrcode": "^1.5.1",
+    "speakeasy": "^2.0.0"
   }
 }
