--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
   "name": "exopet",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Animal Androids...",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Omega0x013/exopet.git"
   },
-  "author": "Xander Bielby",
+  "author": "",
   "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/Omega0x013/exopet/issues"
   },
   "homepage": "https://github.com/Omega0x013/exopet#readme",
   "dependencies": {
-    "@omega0x013/flat-express": "^1.2.0",
-    "express": "^4.18.1",
-    "locallydb": "^0.0.9",
-    "qrcode": "^1.5.1",
-    "speakeasy": "^2.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@omega0x013/flat-express": "^1.2.1",
+    "express": "^4.18.2"
   }
 }
