--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "exopet",
   "version": "1.0.0",
   "description": "Animal Androids...",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "npm i; node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,6 @@
   },
   "homepage": "https://github.com/Omega0x013/exopet#readme",
   "dependencies": {
-    "@omega0x013/flat-express": "^1.2.1",
     "express": "^4.18.2"
   }
 }
