--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A game about lovable little jelly creatures.",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.mjs"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/Omega0x013/exopet#readme",
   "dependencies": {
-    "@omega0x013/flat-express": "^1.2.1",
     "express": "^4.18.2"
   }
 }
