--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -4,7 +4,7 @@
   "description": "Own a froggy friend.",
   "icons": [
     {
-      "src": "img/frog-sit.svg",
+      "src": "/the-pond/img/frog-sit.svg",
       "type": "image/svg+xml",
       "sizes": "any",
       "purpose": "any"
